syntax = "proto3";

package cart_v1;

option go_package = "github.com/Owariq/Go-Ecommerce/shopping-cart-service/pkg/cart_v1;cart_v1";

import "google/protobuf/empty.proto";

service ProductV1 {
    rpc CreateCart (CreateCartRequest) returns (CreateCartResponse);
    rpc GetCart (GetCartRequest) returns (GetCartResponse);
    rpc AddItem (AddItemRequest) returns (AddItemResponse);
    rpc RemoveItem (RemoveItemRequest) returns (RemoveItemResponse);
    rpc ClearCart (ClearCartRequest) returns (google.protobuf.Empty);
}

message Cart {
    int64 cart_id = 1;
    int64 user_id = 2;
    repeated Item items = 3;
}

message Item {
    int64   productId = 1;
    int32   quantity = 2;
}

message CreateCartRequest {
    int64 user_id = 1;
}

message CreateCartResponse {
    int64 cart_id = 1;
}

message GetCartRequest {
    int64 cart_id = 1;
}

message GetCartResponse {
    Cart cart = 1;
}

message AddItemRequest {
    int64 cart_id = 1;
    int64 product_id = 2;
    int32 quantity = 3;
}

message AddItemResponse {
    Cart cart = 1;
}

message RemoveItemRequest {
    int64 cart_id = 1;
    int64 product_id = 2;
}

message RemoveItemResponse {
    Cart cart = 1;
}

message ClearCartRequest {
    int64 cart_id = 1;
}
